feat : babel, shelter schema 바벨 설정 및 shelter, review, user 스키마 import 해 두었습니다. user schema는 제가 테스트용으로 만들어둔거여서 나중에 merge할때 작업하시던 코드로 쓰시면 됩니다. api명세서 보고 작업 crud 작업예정

--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "babel-node index.js ",
+    "dev": "yarn start --watch"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,16 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
     "node": "^20.5.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/node": "^7.22.10",
+    "@babel/preset-env": "^7.22.10"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env"
+    ]
   }
 }
