--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "http-status-codes": "^2.2.0",
     "mongoose": "^7.4.3",
     "node": "^20.5.0"
