--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "node": "^20.5.0",
+    "nodemailer": "^6.9.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
