Docs: updates 폴더 추가 - .gitignore 수정 - user관련 프로필 업데이트 함수 추가 - userModel.js -> _id 수정 - user 스키마 유니크값 변경

--- a/back/.gitignore
+++ b/back/.gitignore
@@ -12,5 +12,6 @@ log
 # misc
 .DS_store
 
-# user profile img storage
-uploads
+# 업로드 파일 자동 생성 미들웨어 만들시 주석 해제
+# # user profile img storage
+# uploads
